@@ -6,6 +6,11 @@
    Available in both ``dulwich.porcelain.unpack_objects()`` and as a CLI
    command ``dulwich unpack-objects``. (Jelmer Vernooĳ)
 
+ * Add ``merge-tree`` plumbing command to ``dulwich.porcelain`` and CLI.
+   This command performs three-way tree merges without touching the working
+   directory or creating commits, similar to ``git merge-tree``. It outputs
+   the merged tree SHA and lists any conflicted paths. (Jelmer Vernooĳ)
+
  * Add support for pack index format version 3. This format supports variable
    hash sizes to enable future SHA-256 support. The implementation includes
    reading and writing v3 indexes with proper hash algorithm identification
